[package]
name = "main"
version = "4.0.4"
authors = ["amanjpro <http://www.amanj.me>"]

[[bin]]
name = "rusmtpd"
path = "src/rusmtpd.rs"

[[bin]]
name = "rusmtpc"
path = "src/rusmtpc.rs"

[dependencies]
secstr = "0.3.0"
serde_json = "1.0.9"
common = { path = "../common" }
esmtp_client = { path = "../esmtp-client" }
