[package]
name = "main"
version = "0.1.0"
authors = ["amanjpro <http://www.amanj.me>"]

[[bin]]
name = "rusmtpd"
path = "src/rusmtpd.rs"

[[bin]]
name = "rusmtpc"
path = "src/rusmtpc.rs"

[dependencies]
fs2 = "0.4"
log = "0.4"
log4rs = "0.8"
dirs = "1.0"
rand = "0.5"
common = { path = "../common" }
protocol = { path = "../protocol" }
