[package]
name = "main"
version = "0.2.0-SNAPSHOT"
authors = ["amanjpro <http://www.amanj.me>"]
edition = '2018'

[[bin]]
name = "rusmtpd"
path = "src/rusmtpd.rs"

[[bin]]
name = "rusmtpc"
path = "src/rusmtpc.rs"

[dependencies]
fs2 = "0.4"
log = "0.4"
log4rs = "0.8"
dirs = "1.0"
native-tls = "0.2"
rand = "0.5"
common = { path = "../common" }
protocol = { path = "../protocol" }
